# Limit-order-book-and-Matching-engine

./: .gitignore  CMakeLists.txt  Dockerfile  Procfile  README.md  docker-compose.yml  market_feed.py  notes.docx  requirements.txt  ~$notes.docx
api/: commentary.py  engine.py  main.py  models.py  ws_manager.py
build-release/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  lob  lob_tests  lob_tests[1]_include.cmake  lob_tests[1]_tests.cmake
data/: sample.txt
include/: order_book.hpp
lob-dashboard/: README.md  index.html  package-lock.json  package.json  requirements.txt  vite.config.js
lob-dashboard/src/: App.jsx  index.css
lob-dashboard/src/components/: Commentary.jsx  OrderBook.jsx  StatsBar.jsx  TradeTape.jsx
lob-dashboard/src/hooks/: useLOB.js
src/: main.cpp  order_book.cpp
tests/: expected_sample_output.txt  replay_test.cmake  test_cancel.cpp  test_cancel_filled.cpp  test_fifo_same_price.cpp  test_market_order.cpp  test_matching_basic.cpp  test_multilevel_fill.cpp
